--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 
   <!-- Regular CSS -->
-<link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="../css/styles.css">
 
   <!-- Google Fonts -->
   <script src="https://kit.fontawesome.com/7e1ff25be4.js" crossorigin="anonymous"></script>
