fixed link to carousel.js file. Carousel now functions as intended

--- a/views/resources.ejs
+++ b/views/resources.ejs
@@ -147,7 +147,7 @@
 
     <!-- External JavaScript and jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="/Views/carousel.js" charset="utf-8"></script>
+    <script src="../js/carousel.js" charset="utf-8"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </body>
 </html>
