--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
   <!-- Navigation Bar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navitem navbar-brand" href="/"> <img class="logo" src="/Images/CompanyLogos/BOE.png" alt=""> <strong>B</strong>ringing
+      <a class="navitem navbar-brand" href="/"> <img class="logo" src="/images/company-logos/boe.png" alt="green square with BOE logo in white"> <strong>B</strong>ringing
       <strong>O</strong>pportunities <strong>E</strong>verywhere
       </strong> </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
