add school logos

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -75,7 +75,7 @@
 
   <li class="listentry">
   <a class="basiclistitema list-group-item list-group-item-action" href="#Item1">
-    <img class= "companylogo" src="/Images/CompanyLogos/IronHack.png" alt="Logo" />
+    <img class= "companylogo" src="../images/company-logos/ironhack.png" alt="Logo" />
     <div class="basiclistitemtextcontainer">
       <strong class="basiclistitemOrganization">IronHack</strong>
       <br>
@@ -90,7 +90,7 @@
 
   <li class="listentry">
     <a class="basiclistitemb list-group-item list-group-item-action" href="#Item2">
-      <img class= "companylogo" src="/Images/CompanyLogos/Cambridge.png" alt="Logo" />
+      <img class= "companylogo" src="../images/company-logos/cambridge.jpeg" alt="Logo" />
       <div class="basiclistitemtextcontainer">
         <strong class="basiclistitemOrganization">Cambridge College</strong>
         <br>
@@ -105,7 +105,7 @@
 
   <li class="listentry">
     <a class="basiclistitema list-group-item list-group-item-action" href="#Item3">
-      <img class= "companylogo" src="/Images/CompanyLogos/Cambridge.png" alt="Logo" />
+      <img class= "companylogo" src="../images/company-logos/cambridge.jpeg" alt="Logo" />
       <div class="basiclistitemtextcontainer">
         <strong class="basiclistitemOrganization">Cambridge College</strong>
         <br>
@@ -121,7 +121,7 @@
 
   <li class="listentry">
     <a class="basiclistitemb list-group-item list-group-item-action" href="#Item4">
-      <img class= "companylogo" src="/Images/CompanyLogos/Paul Mitchell.png " alt="Logo" />
+      <img class= "companylogo" src="../images/company-logos/paul-mitchell-mia.jpeg" alt="Logo" />
       <div class="basiclistitemtextcontainer">
         <strong class="basiclistitemOrganization">Paul Mitchell</strong>
         <br>
@@ -137,7 +137,7 @@
 
   <li>
       <a class="basiclistitema list-group-item list-group-item-action" href="#Item5">
-        <img class= "companylogo" src="Images/CompanyLogos/Paul Mitchell.png" alt="Logo" />
+        <img class= "companylogo" src="../images/company-logos/paul-mitchell-ftl.png" alt="Logo" />
         <div class="basiclistitemtextcontainer">
           <strong class="basiclistitemOrganization">Paul Mitchell</strong>
           <br>
@@ -152,7 +152,7 @@
 
 <li class="listentry">
   <a class="basiclistitemb list-group-item list-group-item-action" href="#Item6">
-    <img class= "companylogo" src="/Images/CompanyLogos/IronHack.png" alt="Logo" />
+    <img class= "companylogo" src="../images/company-logos/ironhack.png" alt="Logo" />
     <div class="basiclistitemtextcontainer">
       <strong class="basiclistitemOrganization">IronHack</strong>
       <br>
@@ -176,7 +176,7 @@
 
     <li id= "Item1" class="indepthlistitema list-group-item list-group-item-action" href="#list-item-1">
         <div class="indepthlistitemcontainer">
-          <img class= "companylogo" src="/Images/CompanyLogos/IronHack.png" alt="Logo" />
+          <img class= "companylogo" src="../images/company-logos/ironhack.png" alt="Logo" />
           <div class="indepthlistitemtextcontainer">
             <a class="indepthlistitemOrganization" href="https://www.ironhack.com/en/miami" target="_blank"> <strong>IronHack</strong></a>
             <br>
@@ -217,7 +217,7 @@
 
     <li id= "Item2" class="indepthlistitemb list-group-item list-group-item-action" href="#list-item-2">
     <div class="indepthlistitemcontainer">
-      <img class= "companylogo" src="/Images/CompanyLogos/Cambridge.png" alt="Logo" />
+      <img class= "companylogo" src="../images/company-logos/cambridge.jpeg" alt="Logo" />
       <div class="indepthlistitemtextcontainer">
         <a class="indepthlistitemOrganization" href="https://www.cambridgehealth.edu/" target="_blank"> <strong>Cambridge College</strong></a>
         <br>
@@ -280,7 +280,7 @@
 
     <li id= "Item3" class="indepthlistitema list-group-item list-group-item-action" href="#list-item-3">
     <div class="indepthlistitemcontainer">
-      <img class= "companylogo" src="/Images/CompanyLogos/Cambridge.png" alt="Logo" />
+      <img class= "companylogo" src="../images/company-logos/cambridge.jpeg" alt="Logo" />
       <div class="indepthlistitemtextcontainer">
         <a class="indepthlistitemOrganization" href="https://www.cambridgehealth.edu/" target="_blank"> <strong>Cambridge College</strong></a>
         <br>
@@ -324,7 +324,7 @@
 
     <li id= "Item4" class="indepthlistitemb list-group-item list-group-item-action" href="#list-item-4">
         <div class="indepthlistitemcontainer">
-          <img class= "companylogo" src="/Images/CompanyLogos/Paul Mitchell.png" alt="Logo" />
+          <img class= "companylogo" src="../images/company-logos/paul-mitchell-mia.jpeg" alt="Logo" />
           <div class="indepthlistitemtextcontainer">
             <a class="indepthlistitemOrganization" href="https://paulmitchell.edu/miami" target="_blank"> <strong>Paul Mitchell School</strong></a>
             <br>
@@ -390,7 +390,7 @@
 
     <li id= "Item5" class="indepthlistitema list-group-item list-group-item-action" href="#list-item-5">
         <div class="indepthlistitemcontainer">
-          <img class= "companylogo" src="/Images/CompanyLogos/Paul Mitchell.png" alt="Logo" />
+          <img class= "companylogo" src="../images/company-logos/paul-mitchell-ftl.png" alt="Logo" />
           <div class="indepthlistitemtextcontainer">
             <a class="indepthlistitemOrganization" href="https://paulmitchell.edu/fortlauderdale" target="_blank"> <strong>Paul Mitchell School</strong></a>
             <br>
@@ -436,7 +436,7 @@
 
     <li id= "Item6" class="indepthlistitemb list-group-item list-group-item-action" href="#list-item-6">
         <div class="indepthlistitemcontainer">
-          <img class= "companylogo" src="/Images/CompanyLogos/IronHack.png" alt="Logo" />
+          <img class= "companylogo" src="../images/company-logos/ironhack.png" alt="Logo" />
           <div class="indepthlistitemtextcontainer">
             <a class="indepthlistitemOrganization" href="https://www.ironhack.com/en/miami" target="_blank"> <strong>IronHack</strong></a>
             <br>
