add subscribe page trade photos

--- a/views/subscribe.ejs
+++ b/views/subscribe.ejs
@@ -55,13 +55,13 @@
       <div class="row">
         <div class="col-sm-6 col-md-4 col-lg-3">
           <figure>
-            <img src="/Images/Subscribe/Electrician.png" class="img-thumbnail grayscale">
+            <img src="../images/subscribe/electrical.jpeg" class="img-thumbnail grayscale">
             <figcaption>Electrical</figcaption>
           </figure>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <figure>
-            <img src="/Images/Subscribe/Welder.png" class="welderpic img-thumbnail grayscale">
+            <img src="../images/subscribe/welding.jpeg" class="welderpic img-thumbnail grayscale">
             <figcaption>Welding</figcaption>
           </figure>
         </div>
@@ -73,13 +73,13 @@
       <div class="row">
         <div class="col-sm-6 col-md-4 col-lg-3">
           <figure>
-            <img src="/Images/Subscribe/Cosmetology.png" class="img-thumbnail grayscale">
+            <img src="../images/subscribe/cosmetology.jpeg" class="img-thumbnail grayscale">
             <figcaption>Cosmetology</figcaption>
           </figure>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <figure>
-            <img src="/Images/Subscribe/Construction Worker.png" class="constructionpic img-thumbnail grayscale">
+            <img src="../images/subscribe/construction.jpeg" class="constructionpic img-thumbnail grayscale">
             <figcaption>Construction</figcaption>
           </figure>
         </div>
