--- a/views/resources.ejs
+++ b/views/resources.ejs
@@ -55,13 +55,37 @@
     <!-- Carousel -->
     <div class="carousel">
       <button class="carousel__button carousel__button--left is-hidden">
-        <img class="arrowimage" src="/Images/Carousel/leftarrow.png" alt="">
+        <img class="arrowimage" src="/images/carousel/leftarrow.png" alt="">
       </button>
       <div class="carousel__track-container">
         <ul class="carousel__track">
           <li class="carousel__slide current-slide">
             <div class="carousel__image-container">
-              <img class="carousel__image" src="/Images/Carousel/welder.jpeg" alt="">
+              <img class="carousel__image" src="/images/carousel/welder.jpeg" alt="welder">
+              <div class="imgcaption">
+                <h6>Name:</h6>
+                <br>
+                <h6>Background:</h6>
+                <br>
+                <h6>Contact me at:</h6>
+              </div>
+            </div>
+          </li>
+          <li class="carousel__slide current-slide">
+            <div class="carousel__image-container">
+              <img class="carousel__image" src="/images/carousel/programmer.png" alt="programmer">
+              <div class="imgcaption">
+                <h6>Name:</h6>
+                <br>
+                <h6>Background:</h6>
+                <br>
+                <h6>Contact me at:</h6>
+              </div>
+            </div>
+          </li>          
+          <li class="carousel__slide">
+            <div class="carousel__image-container">
+              <img class="carousel__image" src="/images/carousel/healthcareworker.jpeg" alt="healthcare worker">
               <div class="imgcaption">
                 <h6>Name:</h6>
                 <br>
@@ -73,7 +97,7 @@
           </li>
           <li class="carousel__slide">
             <div class="carousel__image-container">
-              <img class="carousel__image" src="/Images/Carousel/healthcareworker.png" alt="">
+              <img class="carousel__image" src="/images/carousel/data-analyst.jpeg" alt="data-analyst">
               <div class="imgcaption">
                 <h6>Name:</h6>
                 <br>
@@ -85,31 +109,7 @@
           </li>
           <li class="carousel__slide">
             <div class="carousel__image-container">
-              <img class="carousel__image" src="/Carousel_Images/Carousel_Image1.jpeg" alt="">
-              <div class="imgcaption">
-                <h6>Name:</h6>
-                <br>
-                <h6>Background:</h6>
-                <br>
-                <h6>Contact me at:</h6>
-              </div>
-            </div>
-          </li>
-          <li class="carousel__slide">
-            <div class="carousel__image-container">
-              <img class="carousel__image" src="/Carousel_Images/Carousel_Image1.jpeg" alt="">
-              <div class="imgcaption">
-                <h6>Name:</h6>
-                <br>
-                <h6>Background:</h6>
-                <br>
-                <h6>Contact me at:</h6>
-              </div>
-            </div>
-          </li>
-          <li class="carousel__slide">
-            <div class="carousel__image-container">
-              <img class="carousel__image" src="/Carousel_Images/Carousel_Image1.jpeg" alt="">
+              <img class="carousel__image" src="/images/carousel/auto-tech.jpeg" alt="">
               <div class="imgcaption">
                 <h6>Name:</h6>
                 <br>
@@ -122,7 +122,7 @@
         </ul>
       </div>
       <button class="carousel__button carousel__button--right">
-        <img class="arrowimage" src="/Images/Carousel/rightarrow.png" alt="">
+        <img class="arrowimage" src="/images/carousel/rightarrow.png" alt="">
       </button>
       </div>
       <div class="carousel__nav">
