--- a/views/resources.ejs
+++ b/views/resources.ejs
@@ -16,38 +16,7 @@
   </head>
   <body>
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navitem navbar-brand" href="/"> <img class="logo" src="/images/company-logos/boe.png" alt="green square with BOE logo in white"> <strong>B</strong>ringing
-        <strong>O</strong>pportunities <strong>E</strong>verywhere
-        </strong> </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navlist navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="navitem nav-item">
-              <a class="nav-link active" aria-current="page" href="/"><i class="navicon1 fa-solid fa-house"></i>
-              <br>Home</a>
-            </li>
-            <li class="nav-item">
-              <a style="color: white;"class="navitem nav-link" href="/subscribe"><i class="navicon2 fa-solid fa-user"></i>
-                <br> Subscribe</a>
-            </li>
-            <li class="nav-item">
-              <a style="color: white;"class="navitem nav-link" href="/resources"><i class="navicon3 fa-sharp fa-solid fa-book"></i>
-                <br> Resources</a>
-            </li>
-            <li class="nav-item">
-              <a style="color: white;" class="navitem nav-link" href="/contact"><i class="navicon4 fa-solid fa-handshake"></i>
-              <br>  Contact Us</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
+    <nav><%- include('./partials/nav'); %></nav>
 
     <br>
     <h3 class="carouselheader">Case Studies</h3>
