made ejs reusable partial for footer and replaced it in each page

--- a/views/subscribe.ejs
+++ b/views/subscribe.ejs
@@ -149,21 +149,7 @@
     </form>
 
     <!-- Footer Section -->
-    <footer class="fixed-bottom">
-      <div class="footercontainer">
-        <a target="_blank" href=""
-          ><i class="footericon fa-brands fa-instagram"></i
-        ></a>
-        <a target="_blank" href=""
-          ><i class="footericon fa-brands fa-linkedin"></i
-        ></a>
-        <i
-          onclick="sendemail()"
-          style="cursor: pointer"
-          class="footericon fa-solid fa-envelope"
-        ></i>
-      </div>
-    </footer>
+    <%- include('./partials/footer'); %>
 
     <!-- External JavaScript and jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
