changed paths to partials to reflect new folder structure

--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <%- include('./partials/head'); %>
+    <%- include('../partials/head'); %>
     <link rel="stylesheet" href="../css/subscribe.css" />
   </head>
   <body>
     <!-- Navigation Bar -->
-    <nav><%- include('./partials/nav'); %></nav>
+    <nav><%- include('../partials/nav'); %></nav>
 
     <!-- Calendly inline widget begin -->
     <div
@@ -22,7 +22,7 @@
     <!-- Calendly inline widget end -->
 
     <!-- Footer Section -->
-    <%- include('./partials/footer'); %>
+    <%- include('../partials/footer'); %>
 
     <!-- External JavaScript and jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
