--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <%- include('./partials/head'); %>
+    <%- include('../partials/head'); %>
   </head>
   <body>
     <!-- Navigation Bar -->
-    <nav><%- include('./partials/nav'); %></nav>
+    <nav><%- include('../partials/nav'); %></nav>
 
     <!-- Top Section -->
     <div class="row">
@@ -434,7 +434,7 @@
       </div>
     </div>  
     <!-- Footer Section -->
-    <%- include('./partials/footer'); %>
+    <%- include('../partials/footer'); %>
     <!-- External JavaScript and jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="server.js"></script>
