--- a/views/pages/resources.ejs
+++ b/views/pages/resources.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <%- include('./partials/head'); %>
+    <%- include('../partials/head'); %>
     <link rel="stylesheet" href="/css/resources.css">
   </head>
   <body>
     <!-- Navigation Bar -->
-    <nav><%- include('./partials/nav'); %></nav>
+    <nav><%- include('../partials/nav'); %></nav>
 
     <br>
     <h3 class="carouselheader">Case Studies</h3>
@@ -96,7 +96,7 @@
 
 
     <!-- Footer Section -->
-    <%- include('./partials/footer'); %>
+    <%- include('../partials/footer'); %>
 
 
     <!-- External JavaScript and jQuery -->
