--- a/views/pages/subscribe.ejs
+++ b/views/pages/subscribe.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <%- include('./partials/head'); %>
+    <%- include('../partials/head'); %>
     <link rel="stylesheet" href="/css/subscribe.css" />
   </head>
   <body>
     <!-- Navigation Bar -->
-    <nav><%- include('./partials/nav'); %></nav>
+    <nav><%- include('../partials/nav'); %></nav>
 
     <!-- Worker Image Gallery -->
     <div class="imagegallerycontainer1 container-fluid">
@@ -149,7 +149,7 @@
     </form>
 
     <!-- Footer Section -->
-    <%- include('./partials/footer'); %>
+    <%- include('../partials/footer'); %>
 
     <!-- External JavaScript and jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
