renamed pictureUrl to logoUrl

--- a/views/partials/listings-basic.ejs
+++ b/views/partials/listings-basic.ejs
@@ -6,7 +6,7 @@
         class="basiclistitema list-group-item list-group-item-action"
         href="#Item<%= i %>"
       >
-        <img class="companylogo" src="<%= school.pictureUrl %>" alt="Logo" />
+        <img class="companylogo" src="<%= school.logoUrl %>" alt="Logo" />
         <div class="basiclistitemtextcontainer">
           <strong class="basiclistitemOrganization"><%= school.name %></strong>
           <br />
