partials for listings

--- a/views/partials/listings-basic.ejs
+++ b/views/partials/listings-basic.ejs
@@ -15,8 +15,8 @@
           <em class="basiclistitemTrade"
             ><%= school.programs %>
             <br />
-            <em class="basiclistitemCity"
-              ><%= school.location.city %>, <%= school.location.state %></em
+            <em class="basiclistitemCity">
+              <%= school.location.city %>, <%= school.location.state %></em
             ></em
           >
         </div>
