used partials for listings with premium membership logic

--- a/views/partials/listings-depth.ejs
+++ b/views/partials/listings-depth.ejs
@@ -45,9 +45,12 @@
       </p>
       <hr />
 
-      <% if (school.premiumMembership) { %> <%- include('./application-premium',
-      {school: school}); %> <% } else { %> <%- include('./application', {school:
-      school}); %> <% } %>
+      <% if (school.premiumMembership) { %> 
+        <%- include('./application-premium', {school: school}); %> 
+      <% } else { %> 
+        <%- include('./application', {school: school}); %> 
+      <% } %>
+
     </li>
     <% }); %>
   </ul>
