add missing logos and urls for new businesses

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -32,7 +32,7 @@
 
     <!-- Main Section -->
     <div class="row">
-      <!-- Basic List Gallery -->
+      <!-- Basic Gallery -->
       <%- include('../partials/listings-basic'); %>
 
       <!-- In Depth Gallery  -->
@@ -41,6 +41,7 @@
 
     <!-- Footer Section -->
     <%- include('../partials/footer'); %>
+
     <!-- External JavaScript and jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="server.js"></script>
