--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -21,9 +21,11 @@
 <!-- Regular CSS -->
 <link rel="stylesheet" href="../css/styles.css" />
 
+<!-- Favicon -->
+<link rel="icon" href="/images/favicon.ico" />
+
 <!-- Google Fonts -->
 <script
   src="https://kit.fontawesome.com/7e1ff25be4.js"
   crossorigin="anonymous"
 ></script>
-<script src="ejs.js"></script>
