extracted carousel into a partial

--- a/views/partials/carousel.ejs
+++ b/views/partials/carousel.ejs
@@ -1,3 +1,4 @@
+<h3 class="carouselheader">Case Studies</h3>
 <div class="carousel">
   <button class="carousel__button carousel__button--left is-hidden">
     <img class="arrowimage" src="/images/carousel/leftarrow.png" alt="" />
