extracted subscribe form and image gallery into partials for cleaner code

--- a/views/pages/subscribe.ejs
+++ b/views/pages/subscribe.ejs
@@ -9,144 +9,10 @@
     <nav><%- include('../partials/nav'); %></nav>
 
     <!-- Worker Image Gallery -->
-    <div class="imagegallerycontainer1 container-fluid">
-      <div class="jumbotron">
-        <h1 class="text-center">Trade Examples</h1>
-      </div>
-      <div class="row">
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <figure>
-            <img
-              src="../images/subscribe/electrical.jpeg"
-              class="img-thumbnail grayscale"
-            />
-            <figcaption>Electrical</figcaption>
-          </figure>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <figure>
-            <img
-              src="../images/subscribe/welding.jpeg"
-              class="welderpic img-thumbnail grayscale"
-            />
-            <figcaption>Welding</figcaption>
-          </figure>
-        </div>
-      </div>
-    </div>
-    <div class="imagegallerycontainer2 container-fluid">
-      <div class="jumbotron"></div>
-      <div class="row">
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <figure>
-            <img
-              src="../images/subscribe/cosmetology.jpeg"
-              class="img-thumbnail grayscale"
-            />
-            <figcaption>Cosmetology</figcaption>
-          </figure>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <figure>
-            <img
-              src="../images/subscribe/construction.jpeg"
-              class="constructionpic img-thumbnail grayscale"
-            />
-            <figcaption>Construction</figcaption>
-          </figure>
-        </div>
-      </div>
-    </div>
+    <%- include('../partials/gallery-trade-ex'); %>
 
     <!-- Sign Up Form -->
-
-    <form action="/usersignup" method="post">
-      <div class="container">
-        <h3 class="createaccountheader">
-          Subscribe to our BOE newsletter for weekly updates and skilled trade
-          opportunities!
-        </h3>
-        <hr />
-        <label for="fname" class="form-label">*First Name:</label>
-        <input
-          type="text"
-          class="fnameinput form-control"
-          placeholder="Enter First Name"
-          name="fname"
-          required
-        />
-        <br />
-        <label for="lname" class="form-label">*Last Name:</label>
-        <input
-          type="text"
-          class="lnameinput form-control"
-          placeholder="Enter Last Name"
-          name="lname"
-          required
-        />
-        <br />
-        <label for="email" class="form-label">*Email:</label>
-        <input
-          type="text"
-          class="emailinput form-control"
-          placeholder="Enter Email"
-          name="email"
-          required
-        />
-        <br />
-        <label for="city" class="form-label">*City:</label>
-        <input
-          type="text"
-          class="cityinput form-control"
-          placeholder="Enter City"
-          name="city"
-          required
-        />
-        <br />
-        <label for="zipcode" class="form-label">*Zip Code:</label>
-        <input
-          type="text"
-          class="zipcodeinput form-control"
-          placeholder="Enter Zip Code"
-          name="zipcode"
-          required
-        />
-        <br />
-        <label for="trades" class="form-label"
-          >*List up to 3 trades that interest you:</label
-        >
-        <br />
-        <br />
-        <input
-          type="text"
-          class="tradeinput form-control"
-          placeholder="Enter Trade 1"
-          name="trade1"
-          required
-        />
-        <br />
-        <input
-          type="text"
-          class="tradeinput form-control"
-          placeholder="Enter Trade 2 (optional)"
-          name="trade2"
-        />
-        <br />
-        <input
-          type="text"
-          class="tradeinput form-control"
-          placeholder="Enter Trade 3 (optional)"
-          name="trade3"
-        />
-
-        <br />
-
-        <div class="clearfix">
-          <button type="button" class="cancelbtn">Cancel</button>
-          <button type="submit" class="signupbtn">Sign Up</button>
-        </div>
-      </div>
-    </form>
+    <%- include('../partials/form-subscribe'); %>
 
     <!-- Footer Section -->
     <%- include('../partials/footer'); %>
