--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,6 +45,10 @@
             <a style="color: white;" class="navitem nav-link" href="/contact"><i class="navicon4 fa-solid fa-handshake"></i>
             <br>  Contact Us</a>
           </li>
+          <li class="nav-item">
+            <a style="color: white;" class="navitem nav-link" href="/login"><i class="navicon4 fa-solid fa-computer"></i>
+            <br> Log in</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -506,6 +510,12 @@
     <i onclick="sendemail()" style="cursor: pointer;" class="footericon fa-solid fa-envelope"></i>
   </div>
   </footer>
+
+  <!-- logout -->
+  
+  <form action="/logout?_method=DELETE" method="POST">
+    <button type="submit">Log Out</button>
+  </form>
 
 <!-- External JavaScript and jQuery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
