added log in and out buttons

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -25,6 +25,14 @@
           <a style="color: white;" class="navitem nav-link" href="/contact"><i class="navicon4 fa-solid fa-handshake"></i>
           <br>  Contact Us</a>
         </li>
+        <li class="nav-item">
+          <a style="color: white;" class="navitem nav-link" href="/login"><i class="navicon4 fa-solid fa-computer"></i>
+          <br> Log in</a>
+        </li> 
+        <!-- logout -->
+        <form action="/logout?_method=DELETE" method="POST">
+          <button type="submit">Log Out</button>
+        </form>                
       </ul>
     </div>
   </div>
