--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -18,7 +18,7 @@
               class="searchinput"
               type="text"
               id="searchInput"
-              onkeyup="searchbarfunction()"
+              onkeyup="searchBar()"
               placeholder="Search..."
             />
           </div>
@@ -44,7 +44,8 @@
 
     <!-- External JavaScript and jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script type="server.js"></script>
+    <script src="server.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="/js/search.js"></script>
   </body>
 </html>
