--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -17,6 +17,7 @@
   integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
   crossorigin="anonymous"
 ></script>
+<script type="text/javascript" src="app.js"></script>
 
 <!-- Regular CSS -->
 <link rel="stylesheet" href="../css/styles.css" />
