--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -19,8 +19,8 @@
 ></script>
 
 <!-- Regular CSS -->
-<!-- <link rel="stylesheet" href="../css/styles.css" /> -->
-<link rel="stylesheet" href="../css/lo.css" />
+<link rel="stylesheet" href="../css/styles.css" />
+<!-- <link rel="stylesheet" href="../css/lo.css" /> -->
 
 <!-- Favicon -->
 <link rel="icon" href="/images/favicon.ico" />
