figuring out bootstrap classes. blarg

--- a/views/partials/listings-depth.ejs
+++ b/views/partials/listings-depth.ejs
@@ -3,7 +3,7 @@
     <% schools.forEach(function(school, i) { %>
     <li
       id="Item<%= i %>"
-      class="indepthlistitema list-group-item list-group-item-action"
+      class="indepthlistitema list-group-item"
       href="#list-item-<%= i %>"
     >
       <div class="indepthlistitemcontainer">
