--- a/views/partials/listings-basic.ejs
+++ b/views/partials/listings-basic.ejs
@@ -1,17 +1,11 @@
 <div class="basiclist list-group">
   <ul class="galleryUL" id="gallery1">
-
-  <% let sortedSchools = [...schools] %>  
-  <% sortedSchools.sort((a, b) => { %>
-  <%  if (a.name < b.name) { %>
-      <% return -1; %>
-    <% } %>
-  <% }); %>    
-
-    <% sortedSchools.forEach(function(school, i) { %>
+    <% let sortedSchools = [...schools] %> <% sortedSchools.sort((a, b) => { %>
+    <% if (a.name < b.name) { %> <% return -1; %> <% } %> <% }); %> <%
+    sortedSchools.forEach(function(school, i) { %>
     <li class="listentry">
       <a
-        class="basiclistitema list-group-item list-group-item-action"
+        class="basiclistitema list-group-item "
         href="#Item<%= i %>"
       >
         <img class="companylogo" src="<%= school.logoUrl %>" alt="Logo" />
@@ -33,5 +27,3 @@
     <% }); %>
   </ul>
 </div>
-
-
