figuring out bootstrap classes. blarg

--- a/views/partials/listings-basic.ejs
+++ b/views/partials/listings-basic.ejs
@@ -5,7 +5,7 @@
     sortedSchools.forEach(function(school, i) { %>
     <li class="listentry">
       <a
-        class="basiclistitema list-group-item "
+        class="basiclistitema list-group-item list-group-item-action"
         href="#Item<%= i %>"
       >
         <img class="companylogo" src="<%= school.logoUrl %>" alt="Logo" />
