pruned unnecessary tags around nav partials

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,7 +5,7 @@
   </head>
   <body>
     <!-- Navigation Bar -->
-    <nav><%- include('../partials/nav'); %></nav>
+    <%- include('../partials/nav'); %>
 
     <!-- Top Section -->
     <div class="row">
