--- a/views/pages/resources.ejs
+++ b/views/pages/resources.ejs
@@ -6,7 +6,7 @@
   </head>
   <body>
     <!-- Navigation Bar -->
-    <nav><%- include('../partials/nav'); %></nav>
+    <%- include('../partials/nav'); %>
 
     <br />
 
