--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -6,7 +6,7 @@
   </head>
   <body>
     <!-- Navigation Bar -->
-    <nav><%- include('../partials/nav'); %></nav>
+    <%- include('../partials/nav'); %>
 
     <!-- Calendly inline widget begin -->
     <div
