--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -1,1 +1,13 @@
-<h1>PROFILE</h1>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <%- include('../partials/head'); %>
+  </head>
+  <body>
+    <%- include('../partials/nav'); %>
+
+    <h1>PROFILE</h1>
+
+    <%- include('../partials/footer'); %>
+  </body>
+</html>
