--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -26,13 +26,11 @@
           <br>  Contact Us</a>
         </li>
         <li class="nav-item">
-          <a style="color: white;" class="navitem nav-link" href="/login"><i class="navicon4 fa-solid fa-computer"></i>
-          <br> Log in</a>
+          <%- include('./login-link'); %>
         </li> 
-        <!-- logout -->
-        <form action="/logout?_method=DELETE" method="POST">
-          <button type="submit">Log Out</button>
-        </form>                
+        <li>
+          <%- include('./logout-link'); %>
+        </li>              
       </ul>
     </div>
   </div>
