changed font awesome icons in nav

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -14,7 +14,7 @@
           <br>Home</a>
         </li>
         <li class="nav-item">
-          <a style="color: white;"class="navitem nav-link" href="/subscribe"><i class="navicon2 fa-solid fa-user"></i>
+          <a style="color: white;"class="navitem nav-link" href="/subscribe"><i class="navicon2 fa-solid fa-bell"></i>
             <br> Subscribe</a>
         </li>
         <li class="nav-item">
@@ -24,6 +24,10 @@
         <li class="nav-item">
           <a style="color: white;" class="navitem nav-link" href="/contact"><i class="navicon4 fa-solid fa-handshake"></i>
           <br>  Contact Us</a>
+        </li>
+        <li>
+           <a style="color: white;" class="navitem nav-link" href="/profile"><i class="navicon4 fa-solid fa-user"></i>
+          <br>  Profile</a>         
         </li>
         <li class="nav-item">
           <%- include('./login-link'); %>
@@ -35,3 +39,4 @@
     </div>
   </div>
 </nav>
+
