--- a/views/partials/login-link.ejs
+++ b/views/partials/login-link.ejs
@@ -1,3 +1,4 @@
 <a style="color: white" class="navitem nav-link" href="/login"
-  ><i class="navicon4 fa-solid fa-computer"></i> <br />
-  Log in</a>
+  ><i class="navicon4 fa-solid fa-sign-out"></i> <br />
+  Log in</a
+>
