--- a/views/partials/logout-link.ejs
+++ b/views/partials/logout-link.ejs
@@ -1,3 +1,3 @@
 <form action="/logout?_method=DELETE" method="POST">
-  <button type="submit">Log Out</button>
+  <button class="fa-solid fa-sign-in" type="submit">Log Out</button>
 </form>
