profile no loger available unless user is logged in

--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -2,12 +2,24 @@
 <html lang="en" dir="ltr">
   <head>
     <%- include('../partials/head'); %>
+    <link rel="stylesheet" href="/css/profile.css" />
   </head>
   <body>
     <%- include('../partials/nav'); %>
 
-    <h1>PROFILE</h1>
 
+    <div class="sidebar">
+         <h1>Welcome  </h1>
+      <div class="section">
+        <div class="item">favorites</div>
+        
+        <div class="item">User Profiles</div>
+      </div>
+      <div class="section">
+        <div class="item">Settings</div>
+        <div class="item">Concerns?</div>
+      </div>
+    </div>
     <%- include('../partials/footer'); %>
   </body>
 </html>
