--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -1,5 +1,10 @@
-<h1>Register</h1>
-<form action="/register" method="POST">
+
+
+
+<h1 >Register</h1>
+
+ 
+<form class = 'form' action="/register" method="POST">
   <div>
     <label for="name">Name</label>
     <input type="text" id="name" name="name" required>
@@ -14,4 +19,11 @@
   </div>
   <button type="submit">Register</button>
 </form>
+
 <a href="/login">Login</a>
+
+
+
+      
+      
+  
