user name appears in profile page

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <%- include('../partials/head'); %>
+    <!-- Regular CSS -->
+    <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
     <!-- Navigation Bar -->
