--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,18 +1,38 @@
-<h1>Login</h1>
-<% if (messages.error) { %> <%= messages.error %> <% } %>
-<form action="/login" method="POST">
-  <div>
-    <label for="email">Email</label>
-    <input type="email" id="email" name="email" required />
-  </div>
-  <div>
-    <label for="password">Password</label>
-    <input type="password" id="password" name="password" required />
-  </div>
-  <button type="submit">Login</button>
-</form>
-<a href="/register">Register</a>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <%- include('../partials/head'); %>
+    <link rel="stylesheet" href="../css/login.css" />
+  </head>
+  <body>
+    <%- include('../partials/nav'); %>
 
-<form action="/logout?_method=DELETE" method="POST">
-  <button type="submit">Log Out</button>
-</form>
+    <h1>Login</h1>
+    <% if (messages.error) { %> <%= messages.error %> <% } %>
+    <form action="/login" method="POST">
+      <div>
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" required />
+      </div>
+      <div>
+        <label for="password">Password</label>
+        <input type="password" id="password" name="password" required />
+      </div>
+      <button type="submit">Login</button>
+    </form>
+    <a href="/register">Register</a>
+
+    <form action="/logout?_method=DELETE" method="POST">
+      <button type="submit">Log Out</button>
+    </form>
+
+    <!-- Footer Section -->
+    <%- include('../partials/footer'); %>
+
+    <!-- External JavaScript and jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="server.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="/js/search.js"></script>
+  </body>
+</html>
