--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -7,12 +7,11 @@
   <body>
     <%- include('../partials/nav'); %>
 
-
     <div class="sidebar">
-         <h1>Welcome  </h1>
+      <h1>Welcome <%= name %></h1>
       <div class="section">
         <div class="item">favorites</div>
-        
+
         <div class="item">User Profiles</div>
       </div>
       <div class="section">
