--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -20,7 +20,7 @@
 <script type="text/javascript" src="app.js"></script>
 
 <!-- Regular CSS -->
-<link rel="stylesheet" href="../css/styles.css" />
+<!-- <link rel="stylesheet" href="../css/styles.css" /> -->
 <!-- <link rel="stylesheet" href="../css/lo.css" /> -->
 
 <!-- Favicon -->
