--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -1,29 +1,39 @@
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <%- include('../partials/head'); %>
+    <link rel="stylesheet" href="../css/login.css" />
+  </head>
+  <body>
+    <%- include('../partials/nav'); %>
 
+    <h1>Register</h1>
 
+    <form class="form" action="/register" method="POST">
+      <div>
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" required />
+      </div>
+      <div>
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" required />
+      </div>
+      <div>
+        <label for="password">Password</label>
+        <input type="password" id="password" name="password" required />
+      </div>
+      <button type="submit">Register</button>
+    </form>
 
-<h1 >Register</h1>
+    <a href="/login">Login</a>
 
- 
-<form class = 'form' action="/register" method="POST">
-  <div>
-    <label for="name">Name</label>
-    <input type="text" id="name" name="name" required>
-  </div>
-  <div>
-    <label for="email">Email</label>
-    <input type="email" id="email" name="email" required>
-  </div>
-  <div>
-    <label for="password">Password</label>
-    <input type="password" id="password" name="password" required>
-  </div>
-  <button type="submit">Register</button>
-</form>
+    <!-- Footer Section -->
+    <%- include('../partials/footer'); %>
 
-<a href="/login">Login</a>
-
-
-
-      
-      
-  
+    <!-- External JavaScript and jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="server.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="/js/search.js"></script>
+  </body>
+</html>
