--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -7,7 +7,7 @@
   <body>
     <%- include('../partials/nav'); %>
 
-    <h1>Register</h1>
+    <h1>Looking to kickstart a career in a skilled trade? Join BOE:</h1>
 
     <form class="form" action="/register" method="POST">
       <div>
