--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
     <a class="navitem navbar-brand" href="/"> 
       <img class="logo" src="/images/company-logos/boe.png" alt="green square with BOE logo in white"> 
