removed inline styling which was overriding stylesheets

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -14,19 +14,19 @@
           <br>Home</a>
         </li>    
         <li class="nav-item">
-          <a style="color: white;"class="navitem nav-link" href="/subscribe"><i class="navicon2 fa-solid fa-bell"></i>
+          <a class="navitem nav-link" href="/subscribe"><i class="navicon2 fa-solid fa-bell"></i>
             <br> Subscribe</a>
         </li>
         <li class="nav-item">
-          <a style="color: white;"class="navitem nav-link" href="/resources"><i class="navicon3 fa-sharp fa-solid fa-book"></i>
+          <a class="navitem nav-link" href="/resources"><i class="navicon3 fa-sharp fa-solid fa-book"></i>
             <br> Resources</a>
         </li>
         <li class="nav-item">
-          <a style="color: white;" class="navitem nav-link" href="/contact"><i class="navicon4 fa-solid fa-handshake"></i>
+          <a class="navitem nav-link" href="/contact"><i class="navicon4 fa-solid fa-handshake"></i>
           <br>  Contact Us</a>
         </li>
         <li>
-           <a style="color: white;" class="navitem nav-link" href="/profile"><i class="navicon4 fa-solid fa-user"></i>
+           <a class="navitem nav-link" href="/profile"><i class="navicon4 fa-solid fa-user"></i>
           <br>  Profile</a>         
         </li>
         <li class="nav-item">
