--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -7,7 +7,7 @@
   <body class="lo-body">
     <%- include('../partials/nav'); %>
 
-    <h3>Looking to kickstart a career in a skilled trade? Join BOE:</h3gi>
+    <h3>Looking to kickstart a career in a skilled trade? Join BOE:</h3>
     <div class="lo-container">
       <form class="form" action="/register" method="POST">
         <div>
