switched login.css to lo.css. Playing around with the page styles.

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <%- include('../partials/head'); %>
-    <link rel="stylesheet" href="../css/login.css" />
+    <link rel="stylesheet" href="../css/lo.css" />
   </head>
   <body class="lo-body">
     <%- include('../partials/nav'); %>
