--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <%- include('../partials/head'); %>
-    <link rel="stylesheet" href="/css/profile.css" />
+    <link rel="stylesheet" href="/css/lo.css" />
   </head>
-  <body>
+  <body class="lo-body">
     <%- include('../partials/nav'); %>
 
     <div class="sidebar">
