--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -2,12 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <%- include('../partials/head'); %>
-    <link rel="stylesheet" href="../css/login.css" />
+    <link rel="stylesheet" href="../css/lo.css" />
   </head>
   <body class="lo-body">
     <%- include('../partials/nav'); %>
 
-    <h3>Looking to kickstart a career in a skilled trade? Join BOE:</h3>
+    <h3>Looking to kickstart a career in a skilled trade? Join BOE.</h3>
     <div class="lo-container">
       <form class="form" action="/register" method="POST">
         <div>
@@ -22,7 +22,7 @@
           <label for="password">Password</label>
           <input type="password" id="password" name="password" required />
         </div>
-        <button type="submit">Register</button>
+        <button type="submit">Sign Up</button>
       </form>
       <section>
         <span>Already have an account?</span>
