--- a/views/pages/subscribe.ejs
+++ b/views/pages/subscribe.ejs
@@ -4,7 +4,7 @@
     <%- include('../partials/head'); %>
     <link rel="stylesheet" href="/css/subscribe.css" />
   </head>
-  <body>
+  <body class="lo-body">
     <!-- Navigation Bar -->
     <%- include('../partials/nav'); %>
 
