--- a/views/partials/logout-link.ejs
+++ b/views/partials/logout-link.ejs
@@ -1,3 +1,7 @@
 <form action="/logout?_method=DELETE" method="POST">
-  <button class="fa-solid fa-sign-in" type="submit">Log Out</button>
+  <button type="submit">
+    <i class="fa-solid fa-sign-in"></i>
+    <br />
+    Log Out
+  </button>
 </form>
