--- a/public/css/lo.css
+++ b/public/css/lo.css
@@ -1,5 +1,5 @@
 :root {
-  --logo-color: #557c5d;
+  --logo-color: #437e58;
   --bg-main-color: #f4f4f6;
   --bg-secondary-color: #e6e6e9;
   --bg-color-a: #f3f2ef;
@@ -11,31 +11,133 @@
   --color-a: #a5243d;
   --color-b: #134074;
   --color-c: #914d76;
-}
 
-html,
-body {
-  border: 0;
-  margin: 0;
-  min-height: 100vh;
-  width: 100vw;
-}
-
-body {
-  background-color: var(--bg-color-d);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+button.nav-btn.fa-sign-in {
+  border: none;
+  background-color: transparent;
+  color: white;
+  text-decoration: none;
+  display: inline-block;
+  /* text-transform: capitalize; */
+}
+
+body.lo-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  background-color: var(--bg-secondary-color);
+  padding: 0;
+  margin: 0;
+}
+
+.lo-body nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  height: 64px;
+  width: 100vw;
+  z-index: 5;
+  background-color: var(--logo-color);
+  background-color: #fff;
+  border-bottom: 1px solid rgb(0 0 0 / 15%);
+  box-shadow: rgb(9 30 66 / 25%) 0px 1px 1px, rgb(9 30 66 / 13%) 0px 0px 1px 1px;
+  box-shadow: rgb(0 0 0 / 18%) 0px 2px 4px;
+}
+
+.lo-body nav .logo {
+  height: 40px;
+}
+
+.lo-body nav * {
+  color: var(--icon-inactive-color);
+  display: inline-block;
+  text-decoration: none;
+  /* color: #fff; */
+}
+
+.lo-body .lo-container {
+  background-color: #ffffff;
+  width: 350px;
+  height: 400px;
+  border-radius: 10px;
+  box-sizing: border-box;
+  border: 1px solid rgb(0 0 0 / 15%);
+  /* box-shadow: rgb(0 0 0 / 10%) 0px 4px 6px -1px,
+    rgb(0 0 0 / 6%) 0px 2px 4px -1px; */
+  padding: 25px;
+  margin: 25px;
   position: relative;
+  /* box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px,
+    rgba(9, 30, 66, 0.13) 0px 0px 1px 1px; */
+  box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
 }
 
-.navbar img.logo {
-  height: 50px;
+.lo-body .lo-container input {
+  border: 1px solid rgb(0 0 0 / 15%);
 }
 
-.basiclist {
-  width: 40vw;
+.lo-body .lo-container input,
+.lo-body .lo-container button {
+  width: 100%;
+  margin: 10px 0px;
+  border-radius: 5px;
+  height: 35px;
 }
 
-li.listentry {
-  color: red !important;
-  height: 200px;
+.lo-body .lo-container button {
+  background-color: var(--logo-color);
+  border: none;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.lo-body .lo-container button:hover {
+  background-color: #3f915c;
+}
+
+.lo-body .lo-container section {
+  position: absolute;
+  bottom: 0;
+  margin: 25px;
+}
+
+.lo-body footer {
+  background-color: #ffffff;
+  border-top: 1px solid rgb(0 0 0 / 15%);
+  box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+  z-index: 3;
+  width: 100vw;
+  position: absolute;
+  bottom: 0;
+}
+
+.lo-body footer .footercontainer {
+  padding: 10px;
+  text-align: center;
+}
+
+.lo-body footer .footercontainer > * {
+  margin: 0 15px;
+  color: var(--icon-inactive-color);
+  font-size: 1.5em;
+}
+
+.lo-body nav button {
+  font-size: 100%;
+  font-family: inherit;
+  font-weight: inherit;
+  border: 0;
+  background-color: transparent;
+  line-height: inherit;
+  cursor: pointer;
+  padding: 0.5rem 1rem;
 }
