--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,7 +5,7 @@
     <!-- Regular CSS -->
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
-  <body>
+  <body class="lo-body">
     <!-- Navigation Bar -->
     <%- include('../partials/nav'); %>
 
