--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -7,6 +7,8 @@
   integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
   crossorigin="anonymous"
 />
+
+<!-- External JavaScript -->
 <script
   src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
   integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
@@ -17,9 +19,11 @@
   integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
   crossorigin="anonymous"
 ></script>
+
+<!-- Internal JavaScript -->
 <script type="text/javascript" src="app.js"></script>
 
-<!-- Regular CSS -->
+<!-- Internal CSS -->
 <!-- <link rel="stylesheet" href="../css/styles.css" /> -->
 <!-- <link rel="stylesheet" href="../css/lo.css" /> -->
 
