working on log in and datbase

--- a/views/partials/form-subscribe.ejs
+++ b/views/partials/form-subscribe.ejs
@@ -19,7 +19,7 @@
       type="text"
       class="lnameinput form-control"
       placeholder="Enter Last Name"
-      name="name"
+      name="lname"
       required
     />
     <br />
